--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "react-scripts build",
     "test": "cypress run --reporter nyan",
     "test:ci": "start-server-and-test http://localhost:3000",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "cypress": "start-server-and-test http://localhost:3000 cy:open"
   },
   "eslintConfig": {
     "extends": [
